--- a/cockroach-control-services.html
+++ b/cockroach-control-services.html
@@ -438,7 +438,7 @@ Service Area
                 <a href="index.htm"><img src="assets/img/titan-pest-control-logo.jpeg" alt="Titan Pest Control Logo Footer" style="height: 4rem;"></a>
               </div>
               <p class="about-text">
-                Titan Pest Control leads in eco-friendly pest solutions, safeguarding homes and businesses across India with expert care.
+                Titan Pest Control leads in economical-friendly pest solutions, safeguarding homes and businesses across India with expert care.
               </p>
               <div class="th-social">
                 <a href="https://www.facebook.com/Titanpest" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
@@ -562,3 +562,4 @@ Service Area
 
 </body>
 </html>
+
