--- a/pest-control-chandanagar.html
+++ b/pest-control-chandanagar.html
@@ -103,7 +103,7 @@
             <li class="menu-item-has-children">
               <a href="#">Location Wise Services</a>
               <ul class="sub-menu">
-                <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
+                <li><a href="pest-control-chandanagar.html""class=active">Chandanagar</a></li>
                 <li><a href="pest-control-balnagar.html">Balanagar</a></li>
                 <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
                 <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
@@ -171,7 +171,7 @@
                       <li class="menu-item-has-children">
                         <a href="#">Location Wise Services</a>
                         <ul class="sub-menu">
-                          <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
+                          <li><a href="pest-control-chandanagar.html""class=active">Chandanagar</a></li>
                 <li><a href="pest-control-balnagar.html">Balanagar</a></li>
                 <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
                 <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
@@ -560,4 +560,5 @@
 
 </body>
 </html>
+
 
