--- a/pest-control-balanagar.html
+++ b/pest-control-balanagar.html
@@ -105,7 +105,7 @@
               <a href="#">Location Wise Services</a>
               <ul class="sub-menu">
                  <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
-                <li><a href="pest-control-balnagar.html">Balanagar</a></li>
+                <li><a href="pest-control-balnagar.html""class=active">Balanagar</a></li>
                 <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
                 <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
                 <li><a href="pest-control-kondapur.html">Kondapur</a></li>
@@ -173,7 +173,7 @@
                         <a href="#">Location Wise Services</a>
                         <ul class="sub-menu">
                           <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
-                <li><a href="pest-control-balnagar.html">Balanagar</a></li>
+                <li><a href="pest-control-balnagar.html""class=active">Balanagar</a></li>
                 <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
                 <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
                 <li><a href="pest-control-kondapur.html">Kondapur</a></li>
@@ -522,4 +522,5 @@
 
 </body>
 </html>
+
 
