--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <nav class="th-mobile-menu" aria-label="Mobile Navigation">
       <!-- (same nav as you shared) -->
       <ul>
-        <li><a href="index.htm">Home</a></li>
+        <li><a href="index.htm" class="active">Home</a></li>
         <li><a href="about.html">About Us</a></li>
         <li class="menu-item-has-children">
           <a href="service.html">Our Services</a>
@@ -95,8 +95,6 @@
                 <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                 <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
                 <li><a href="termite-control-services-delhi.html">Termite Control Service</a></li>
-                <li><a href="bird-control.html">Bird Control Service</a></li>
-                <li><a href="disinfection-services.html">Disinfection Service</a></li>
                 <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation Service</a></li>
               </ul>
             </li>
@@ -1647,3 +1645,4 @@ Climate change and rapid urbanization are fueling a pest explosion in Indian cit
 
 </body>
 </html>
+
