--- a/pest-control-Jeedimetla.html
+++ b/pest-control-Jeedimetla.html
@@ -114,7 +114,7 @@
                 <li><a href="pest-control-gachibowli.html">Gachibowli</a></li>
                 <li><a href="pest-control-kphb.html">KPHB</a></li>
                 <li><a href="pest-control-hitech-city.html">Hi-Tech City</a></li>
-                <li><a href="pest-control-jeedimetla.html">Jeedimetla</a></li>
+                <li><a href="pest-control-jeedimetla.html""class=active">Jeedimetla</a></li>
               </ul>
             </li>
           </ul>
@@ -182,7 +182,7 @@
                           <li><a href="pest-control-gachibowli.html">Gachibowli</a></li>
                           <li><a href="pest-control-kphb.html">KPHB</a></li>
                           <li><a href="pest-control-hitech-city.html">Hi-Tech City</a></li>
-                          <li><a href="pest-control-jeedimetla.html">Jeedimetla</a></li>
+                          <li><a href="pest-control-jeedimetla.html""class=active">Jeedimetla</a></li>
                         </ul>
                       </li>
                     </ul>
@@ -575,5 +575,6 @@ Service Area
 
 </body>
 </html>
+
 
 
