--- a/service.html
+++ b/service.html
@@ -84,7 +84,7 @@
         <li><a href="index.htm">Home</a></li>
         <li><a href="about.html">About Us</a></li>
         <li class="menu-item-has-children">
-          <a href="service.html">Our Services</a>
+          <a href="service.html""class=active">Our Services</a>
           <ul class="sub-menu">
             <li class="menu-item-has-children">
               <a href="#">Services We Provide</a>
@@ -93,7 +93,7 @@
                 <li><a href="rodent-control-services.html">Rodent Control Services</a></li>
                 <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                 <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
-                <li><a href="termite-control-services-Hyderabad.html">Termite Control Service</a></li>
+                <li><a href="termite-control-services-hyderabad.html">Termite Control Service</a></li>
                 <li><a href="bird-control.html">Bird Control Service</a></li>
                 <li><a href="disinfection-services.html">Disinfection Service</a></li>
                 <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation Service</a></li>
@@ -102,18 +102,17 @@
             <li class="menu-item-has-children">
               <a href="#">Location Wise Services</a>
               <ul class="sub-menu">
-                  <li><a href="pest-control-chandigarh.html">Chandigarh, Punjab</a></li>
-                <li><a href="pest-control-green-park-Hyderabad.html">Green Park, Hyderabad</a></li>
-                <li><a href="pest-control-in-alaknanda.html">Alaknanda, Hyderabad</a></li>
-                <li><a href="pest-control-in-cr-park.html">Cr Park, Hyderabad</a></li>
-                <li><a href="pest-control-services-panchsheel-park.html">Panchseel Park, Hyderabad</a></li>
-                <li><a href="pest-control-siri-fort-road.html">Siri Fort Road, Hyderabad</a></li>
-                <li><a href="pest-control-anand-lok-Hyderabad.html">Anand Lok, Hyderabad</a></li>
-                <li><a href="pest-control-uday-park-Hyderabad.html">Uday Park, Hyderabad</a></li>
-                <li><a href="pest-control-okhla-industrial-area-phase-1-Hyderabad.html">Okhla Phase 1, Hyderabad</a></li>
-                <li><a href="pest-control-okhla-industrial-area-phase-2-Hyderabad.html">Okhla Phase 2, Hyderabad</a></li>
-                <li><a href="pest-control-okhla-industrial-area-phase-3-Hyderabad.html">Okhla Phase 3, Hyderabad</a></li>
-                <li><a href="https://Titanpestcontrol.com/pest-control-aerocity-Hyderabad">Aerocity, Hyderabad</a></li>
+                <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
+                <li><a href="pest-control-balnagar.html">Balanagar</a></li>
+                <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
+                <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
+                <li><a href="pest-control-kondapur.html">Kondapur</a></li>
+                <li><a href="pest-control-madhapur.html">Madhapur</a></li>
+                <li><a href="pest-control-kukatpally.html">Kukatpally</a></li>
+                <li><a href="pest-control-gachibowli.html">Gachibowli</a></li>
+                <li><a href="pest-control-kphb.html">KPHB</a></li>
+                <li><a href="pest-control-hitech-city.html">Hi-Tech City</a></li>
+                <li><a href="pest-control-jeedimetla.html">Jeedimetla</a></li>
               </ul>
             </li>
           </ul>
@@ -153,7 +152,7 @@
                   <li><a href="index.htm">Home</a></li>
                   <li><a href="about.html">About Us</a></li>
                   <li class="menu-item-has-children">
-                    <a href="service.html">Our Services</a>
+                    <a href="service.html""class=active">Our Services</a>
                     <ul class="sub-menu">
                       <li class="menu-item-has-children">
                         <a href="#">Services We Provide</a>
@@ -162,7 +161,7 @@
                           <li><a href="rodent-control-services.html">Rodent Control Services</a></li>
                           <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                           <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
-                          <li><a href="termite-control-services-Hyderabad.html">Termite Control Service</a></li>
+                          <li><a href="termite-control-services-hyderabad.html">Termite Control Service</a></li>
                           <li><a href="bird-control.html">Bird Control Service</a></li>
                           <li><a href="disinfection-services.html">Disinfection Service</a></li>
                           <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation Service</a></li>
@@ -171,18 +170,17 @@
                       <li class="menu-item-has-children">
                         <a href="#">Location Wise Services</a>
                         <ul class="sub-menu">
-                             <li><a href="pest-control-chandigarh.html">Chandigarh, Punjab</a></li>
-                          <li><a href="pest-control-green-park-Hyderabad.html">Green Park, Hyderabad</a></li>
-                          <li><a href="pest-control-in-alaknanda.html">Alaknanda, Hyderabad</a></li>
-                          <li><a href="pest-control-in-cr-park.html">Cr Park, Hyderabad</a></li>
-                          <li><a href="pest-control-services-panchsheel-park.html">Panchseel Park, Hyderabad</a></li>
-                          <li><a href="pest-control-siri-fort-road.html">Siri Fort Road, Hyderabad</a></li>
-                          <li><a href="pest-control-anand-lok-Hyderabad.html">Anand Lok, Hyderabad</a></li>
-                          <li><a href="pest-control-uday-park-Hyderabad.html">Uday Park, Hyderabad</a></li>
-                          <li><a href="pest-control-okhla-industrial-area-phase-1-Hyderabad.html">Okhla Phase 1, Hyderabad</a></li>
-                          <li><a href="pest-control-okhla-industrial-area-phase-2-Hyderabad.html">Okhla Phase 2, Hyderabad</a></li>
-                          <li><a href="pest-control-okhla-industrial-area-phase-3-Hyderabad.html">Okhla Phase 3, Hyderabad</a></li>
-                          <li><a href="https://Titanpestcontrol.com/pest-control-aerocity-Hyderabad">Aerocity, Hyderabad</a></li>
+                           <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
+                <li><a href="pest-control-balnagar.html">Balanagar</a></li>
+                <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
+                <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
+                <li><a href="pest-control-kondapur.html">Kondapur</a></li>
+                <li><a href="pest-control-madhapur.html">Madhapur</a></li>
+                <li><a href="pest-control-kukatpally.html">Kukatpally</a></li>
+                <li><a href="pest-control-gachibowli.html">Gachibowli</a></li>
+                <li><a href="pest-control-kphb.html">KPHB</a></li>
+                <li><a href="pest-control-hitech-city.html">Hi-Tech City</a></li>
+                <li><a href="pest-control-jeedimetla.html">Jeedimetla</a></li>
                         </ul>
                       </li>
                     </ul>
@@ -884,7 +882,7 @@ Testimonial Area
                 <li><a href="rodent-control-services.html">Rodent Control</a></li>
                 <li><a href="mosquito-control-services.html">Mosquito Control</a></li>
                 <li><a href="bedbug-control-services.html">Bed Bug Control</a></li>
-                <li><a href="termite-control-services-Hyderabad.html">Termite Control</a></li>
+                <li><a href="termite-control-services-hyderabad.html">Termite Control</a></li>
                 <li><a href="bird-control.html">Bird Control</a></li>
                 <li><a href="disinfection-services.html">Disinfection Service</a></li>
                 <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation</a></li>
@@ -966,6 +964,7 @@ Testimonial Area
 
 </body>
 </html>
+
 
 
   
