--- a/rodent-control-services.html
+++ b/rodent-control-services.html
@@ -91,10 +91,10 @@
               <a href="#">Services We Provide</a>
               <ul class="sub-menu">
                 <li><a href="cockroach-control-services.html">Cockroach Control Services</a></li>
-                <li><a href="rodent-control-services.html">Rodent Control Services</a></li>
+                <li><a href="rodent-control-services.html""class=active">Rodent Control Services</a></li>
                 <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                 <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
-                <li><a href="termite-control-services-Hyderabad.html">Termite Control Service</a></li>
+                <li><a href="termite-control-services-hyderabad.html">Termite Control Service</a></li>
                 <li><a href="bird-control.html">Bird Control Service</a></li>
                 <li><a href="disinfection-services.html">Disinfection Service</a></li>
                 <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation Service</a></li>
@@ -103,18 +103,17 @@
             <li class="menu-item-has-children">
               <a href="#">Location Wise Services</a>
               <ul class="sub-menu">
-                  <li><a href="pest-control-chandigarh.html">Chandigarh, Punjab</a></li>
-                <li><a href="pest-control-green-park-Hyderabad.html">Green Park, Hyderabad</a></li>
-                <li><a href="pest-control-in-alaknanda.html">Alaknanda, Hyderabad</a></li>
-                <li><a href="pest-control-in-cr-park.html">Cr Park, Hyderabad</a></li>
-                <li><a href="pest-control-services-panchsheel-park.html">Panchseel Park, Hyderabad</a></li>
-                <li><a href="pest-control-siri-fort-road.html">Siri Fort Road, Hyderabad</a></li>
-                <li><a href="pest-control-anand-lok-Hyderabad.html">Anand Lok, Hyderabad</a></li>
-                <li><a href="pest-control-uday-park-Hyderabad.html">Uday Park, Hyderabad</a></li>
-                <li><a href="pest-control-okhla-industrial-area-phase-1-Hyderabad.html">Okhla Phase 1, Hyderabad</a></li>
-                <li><a href="pest-control-okhla-industrial-area-phase-2-Hyderabad.html">Okhla Phase 2, Hyderabad</a></li>
-                <li><a href="pest-control-okhla-industrial-area-phase-3-Hyderabad.html">Okhla Phase 3, Hyderabad</a></li>
-                <li><a href="https://Titanpestcontrol.com/pest-control-aerocity-Hyderabad">Aerocity, Hyderabad</a></li>
+                <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
+                <li><a href="pest-control-balnagar.html">Balanagar</a></li>
+                <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
+                <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
+                <li><a href="pest-control-kondapur.html">Kondapur</a></li>
+                <li><a href="pest-control-madhapur.html">Madhapur</a></li>
+                <li><a href="pest-control-kukatpally.html">Kukatpally</a></li>
+                <li><a href="pest-control-gachibowli.html">Gachibowli</a></li>
+                <li><a href="pest-control-kphb.html">KPHB</a></li>
+                <li><a href="pest-control-hitech-city.html">Hi-Tech City</a></li>
+                <li><a href="pest-control-jeedimetla.html">Jeedimetla</a></li>
               </ul>
             </li>
           </ul>
@@ -160,10 +159,10 @@
                         <a href="#">Services We Provide</a>
                         <ul class="sub-menu">
                           <li><a href="cockroach-control-services.html">Cockroach Control Services</a></li>
-                          <li><a href="rodent-control-services.html">Rodent Control Services</a></li>
+                          <li><a href="rodent-control-services.html""class=active">Rodent Control Services</a></li>
                           <li><a href="mosquito-control-services.html">Mosquito Control Services</a></li>
                           <li><a href="bedbug-control-services.html">BedBug Control Services</a></li>
-                          <li><a href="termite-control-services-Hyderabad.html">Termite Control Service</a></li>
+                          <li><a href="termite-control-services-hyderabad.html">Termite Control Service</a></li>
                           <li><a href="bird-control.html">Bird Control Service</a></li>
                           <li><a href="disinfection-services.html">Disinfection Service</a></li>
                           <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation Service</a></li>
@@ -172,18 +171,17 @@
                       <li class="menu-item-has-children">
                         <a href="#">Location Wise Services</a>
                         <ul class="sub-menu">
-                             <li><a href="pest-control-chandigarh.html">Chandigarh, Punjab</a></li>
-                          <li><a href="pest-control-green-park-Hyderabad.html">Green Park, Hyderabad</a></li>
-                          <li><a href="pest-control-in-alaknanda.html">Alaknanda, Hyderabad</a></li>
-                          <li><a href="pest-control-in-cr-park.html">Cr Park, Hyderabad</a></li>
-                          <li><a href="pest-control-services-panchsheel-park.html">Panchseel Park, Hyderabad</a></li>
-                          <li><a href="pest-control-siri-fort-road.html">Siri Fort Road, Hyderabad</a></li>
-                          <li><a href="pest-control-anand-lok-Hyderabad.html">Anand Lok, Hyderabad</a></li>
-                          <li><a href="pest-control-uday-park-Hyderabad.html">Uday Park, Hyderabad</a></li>
-                          <li><a href="pest-control-okhla-industrial-area-phase-1-Hyderabad.html">Okhla Phase 1, Hyderabad</a></li>
-                          <li><a href="pest-control-okhla-industrial-area-phase-2-Hyderabad.html">Okhla Phase 2, Hyderabad</a></li>
-                          <li><a href="pest-control-okhla-industrial-area-phase-3-Hyderabad.html">Okhla Phase 3, Hyderabad</a></li>
-                          <li><a href="https://Titanpestcontrol.com/pest-control-aerocity-Hyderabad">Aerocity, Hyderabad</a></li>
+                           <li><a href="pest-control-chandanagar.html">Chandanagar</a></li>
+                <li><a href="pest-control-balnagar.html">Balanagar</a></li>
+                <li><a href="pest-control-jubilee-hills.html">Jubilee Hills</a></li>
+                <li><a href="pest-control-lbnagar.html">LB Nagar</a></li>
+                <li><a href="pest-control-kondapur.html">Kondapur</a></li>
+                <li><a href="pest-control-madhapur.html">Madhapur</a></li>
+                <li><a href="pest-control-kukatpally.html">Kukatpally</a></li>
+                <li><a href="pest-control-gachibowli.html">Gachibowli</a></li>
+                <li><a href="pest-control-kphb.html">KPHB</a></li>
+                <li><a href="pest-control-hitech-city.html">Hi-Tech City</a></li>
+                <li><a href="pest-control-jeedimetla.html">Jeedimetla</a></li>
                         </ul>
                       </li>
                     </ul>
@@ -340,7 +338,7 @@
             <h3 class="widget_title">More Pest Control Services</h3>
             <ul>
               <li><a href="cockroach-control-services.html">Cockroach Control</a></li>
-              <li><a href="/termite-control-services">Termite Treatment</a></li>
+              <li><a href="termite-control-services">Termite Treatment</a></li>
               <li><a href="bedbug-control-services.html">Bed Bug Removal</a></li>
               <li><a href="mosquito-control-services.html">Mosquito Prevention</a></li>
               <li><a href="disinfection-services.html">Disinfection</a></li>
@@ -449,7 +447,7 @@
                 <li><a href="rodent-control-services.html">Rodent Control</a></li>
                 <li><a href="mosquito-control-services.html">Mosquito Control</a></li>
                 <li><a href="bedbug-control-services.html">Bed Bug Control</a></li>
-                <li><a href="termite-control-services-Hyderabad.html">Termite Control</a></li>
+                <li><a href="termite-control-services-hyderabad.html">Termite Control</a></li>
                 <li><a href="bird-control.html">Bird Control</a></li>
                 <li><a href="disinfection-services.html">Disinfection Service</a></li>
                 <li><a href="anti-termite-reticulation-system.html">Anti Termite Reticulation</a></li>
@@ -531,3 +529,4 @@
 
 </body>
 </html>
+
